objects/Activity.object
<CustomObject>
    <fields>
        <fullName>geoCallEnded__c</fullName>
        <label>Call ended</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>geoCallID__c</fullName>
        <label>Call ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geoCallStarted__c</fullName>
        <label>Call started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>geoCalled__c</fullName>
        <label>Called</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geoCalling__c</fullName>
        <label>Calling</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geoCollectName__c</fullName>
        <label>Collecting device</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geoDelivName__c</fullName>
        <label>Delivering device name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geoDelivNum__c</fullName>
        <label>Delivering device number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geoDigits__c</fullName>
        <label>Collected ditgits</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geoDistName__c</fullName>
        <label>Distributing device name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geoDistNum__c</fullName>
        <label>Distributing device number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geoLastRedirNum__c</fullName>
        <label>Last redir. device</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geoRemoteNumber__c</fullName>
        <label>Remote number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geoUCID__c</fullName>
        <label>UCID</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geoUUI__c</fullName>
        <label>UUI</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>